wishlist and cart items added in database yet remains color change on remove Imported from Changeset 2518

--- a/WMS/Views/Theme/Default/ProductAllowanceGroups/Create.cshtml
+++ b/WMS/Views/Theme/Default/ProductAllowanceGroups/Create.cshtml
@@ -56,7 +56,7 @@
     }
 
 </script>
-<h2><span>Add Product Allowance Group</span></h2>
+<h2><span>Add Product Allowance Group (@ViewBag.SiteName)</span></h2>
 
 @using (Html.BeginForm("Create", "ProductAllowanceGroups", FormMethod.Post, new { @class = "form-navigation", onsubmit = "return submitformNav()" }))
 {
