--- a/WMS/Views/Theme/Default/ProductAllowances/Edit.cshtml
+++ b/WMS/Views/Theme/Default/ProductAllowances/Edit.cshtml
@@ -16,7 +16,7 @@
         new Script { ExtensionType = ExtensionType.DateEdit }
         )
 }
-<h2><span>Edit Product Allowance</span></h2>
+<h2><span>Edit Product Allowance (@ViewBag.SiteName)</span></h2>
 @Html.Hidden("ProductAllowance", true)
 @using (Html.BeginForm())
 {
