--- a/WMS/Views/Theme/Default/WebsiteContentPages/Create.cshtml
+++ b/WMS/Views/Theme/Default/WebsiteContentPages/Create.cshtml
@@ -18,7 +18,7 @@
         )
 }
 
-<h2><span>Add Website Content Page</span></h2>
+<h2><span>Add Website Content Page (@ViewBag.SiteName)</span></h2>
 <script type="text/javascript">
     function onFileUploadComplete(s, e) {
         if (e.callbackData) {
