--- a/WMS/Views/Theme/Default/WebsiteDiscountCodes/Create.cshtml
+++ b/WMS/Views/Theme/Default/WebsiteDiscountCodes/Create.cshtml
@@ -56,7 +56,7 @@
     }
 
 </script>
-<h2><span>Add Website Discount Code</span></h2>
+<h2><span>Add Website Discount Code (@ViewBag.SiteName)</span></h2>
 
 @using (Html.BeginForm("Create", "WebsiteDiscountCodes", FormMethod.Post, new { @class = "form-navigation", onsubmit = "return submitformNav()" }))
 {
