--- a/WMS/Views/Theme/Default/WebsiteDiscountCodes/CreateProductNavigation.cshtml
+++ b/WMS/Views/Theme/Default/WebsiteDiscountCodes/CreateProductNavigation.cshtml
@@ -12,7 +12,7 @@
         )
 }
 @{
-    ViewBag.Title = "Edit Navigation Product";
+    ViewBag.Title = "Edit Disocunt Code Product";
 }
 <script type="text/javascript">
     MVCxClientGlobalEvents.AddControlsInitializedEventHandler(OnBeginGridCallback);
@@ -51,7 +51,7 @@
 
 </script>
 
-<h2><span>Update Navigation Product </span></h2>
+<h2><span>Update Discount Code Product  (@ViewBag.SiteName) </span></h2>
 
 @Html.Hidden("LastEditingRowIndex")
 @Html.Hidden("LastEditingColIndex")
