--- a/WMS/Views/Theme/Default/WebsiteNavigations/CreateProductNavigation.cshtml
+++ b/WMS/Views/Theme/Default/WebsiteNavigations/CreateProductNavigation.cshtml
@@ -51,7 +51,7 @@
 
 </script>
 
-<h2><span>Update Navigation Product </span></h2>
+<h2><span>Update Navigation Product (@ViewBag.SiteName)</span></h2>
 
 @Html.Hidden("LastEditingRowIndex")
 @Html.Hidden("LastEditingColIndex")
