--- a/WMS/Views/Theme/Default/WebsiteShippingRules/Edit.cshtml
+++ b/WMS/Views/Theme/Default/WebsiteShippingRules/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Edit";
 }
 
-<h2><span>Edit Website Shipping Rule</span></h2>
+<h2><span>Edit Website Shipping Rule (@ViewBag.SiteName)</span></h2>
 
 @using (Html.BeginForm())
 {
