--- a/WMS/Views/Theme/Default/WebsiteSliders/Edit.cshtml
+++ b/WMS/Views/Theme/Default/WebsiteSliders/Edit.cshtml
@@ -42,7 +42,7 @@
         }
     }
 </script>
-<h2><span> Edit Website Slider</span></h2>
+<h2><span> Edit Website Slider (@ViewBag.SiteName)</span></h2>
 @Html.Hidden("websiteSlider", true)
 @Html.Hidden("hdPFiles", (List<string>)ViewBag.Files)
 @using (Html.BeginForm())
