--- a/WMS/Views/Theme/Default/ProductAllowanceGroups/Edit.cshtml
+++ b/WMS/Views/Theme/Default/ProductAllowanceGroups/Edit.cshtml
@@ -56,7 +56,7 @@
     }
 
 </script>
-<h2><span>Edit Product Allowance Group</span></h2>
+<h2><span>Edit Product Allowance Group (@ViewBag.SiteName)</span></h2>
 
 @using (Html.BeginForm("Edit", "ProductAllowanceGroups", FormMethod.Post, new { @class = "form-navigation", onsubmit = "return submitformNav()" }))
 {
