--- a/WMS/Views/Theme/Default/ProductAllowances/Create.cshtml
+++ b/WMS/Views/Theme/Default/ProductAllowances/Create.cshtml
@@ -17,7 +17,7 @@
         new Script { ExtensionType = ExtensionType.DateEdit }
         )
 }
-<h2><span>Create Product Allowance</span></h2>
+<h2><span>Create Product Allowance (@ViewBag.SiteName)</span></h2>
 @Html.Hidden("ProductAllowance", true)
 @using (Html.BeginForm())
 {
