--- a/WMS/Views/Theme/Default/ProductsWebsitesMaps/Index.cshtml
+++ b/WMS/Views/Theme/Default/ProductsWebsitesMaps/Index.cshtml
@@ -36,7 +36,7 @@
     }
 
 </script>
-<h2><span>Product Website Maps</span></h2>
+<h2><span>Product Website Maps (@ViewBag.SiteName)</span></h2>
 <script type="text/javascript">
     function OnGridFocusedRowChanged(s, e) {
         $('.selkey').val(s.GetRowKey(s.GetFocusedRowIndex()));
