--- a/WMS/Views/Theme/Default/WebsiteDiscountCodes/Edit.cshtml
+++ b/WMS/Views/Theme/Default/WebsiteDiscountCodes/Edit.cshtml
@@ -56,7 +56,7 @@
     }
 
 </script>
-<h2><span>Edit Website Discount Code</span></h2>
+<h2><span>Edit Website Discount Code (@ViewBag.SiteName)</span></h2>
 
 @using (Html.BeginForm("Edit", "WebsiteDiscountCodes", FormMethod.Post, new { @class = "form-navigation", onsubmit = "return submitformNav()" }))
 {
