--- a/WMS/Views/Theme/Default/WebsiteDiscountCodes/Index.cshtml
+++ b/WMS/Views/Theme/Default/WebsiteDiscountCodes/Index.cshtml
@@ -15,7 +15,7 @@
         )
 }
 
-<h2><span>Website Discount Code</span></h2>
+<h2><span>Website Discount Code (@ViewBag.SiteName)</span></h2>
 <script type="text/javascript">
     function OnGridFocusedRowChanged(s, e) {
         $('.selkey').val(s.GetRowKey(s.GetFocusedRowIndex()));
