--- a/WMS/Views/Theme/Default/WebsiteNavigations/Edit.cshtml
+++ b/WMS/Views/Theme/Default/WebsiteNavigations/Edit.cshtml
@@ -130,7 +130,7 @@
 
 
 </script>
-<h2><span>Add Website Navigation</span></h2>
+<h2><span>Edit Website Navigation  (@ViewBag.SiteName)</span></h2>
 @Html.Hidden("hdPFiles", (Dictionary<string, string>)ViewBag.Files)
 @using (Html.BeginForm("Edit", "WebsiteNavigations", FormMethod.Post, new { @class = "form-navigation" }))
 {
