--- a/WMS/Views/Theme/Default/WebsiteShippingRules/Create.cshtml
+++ b/WMS/Views/Theme/Default/WebsiteShippingRules/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create";
 }
 
-<h2><span>Create Website Shipping Rule</span></h2>
+<h2><span>Create Website Shipping Rule (@ViewBag.SiteName)</span></h2>
 
 @using (Html.BeginForm())
 {
