--- a/WMS/Views/Theme/Default/WebsiteVouchers/Index.cshtml
+++ b/WMS/Views/Theme/Default/WebsiteVouchers/Index.cshtml
@@ -15,7 +15,7 @@
         )
 }
 
-<h2><span>Website Vouchers</span></h2>
+<h2><span>Website Vouchers (@ViewBag.SiteName)</span></h2>
 <script type="text/javascript">
     function OnGridFocusedRowChanged(s, e)
     {
