--- a/WarehouseEcommerce/Views/Theme/University/Shared/_SliderPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_SliderPartial.cshtml
@@ -5,23 +5,45 @@
          class="carousel slide nb_hm_bnr_carrousle carousel-fade"
          data-ride="carousel">
         <div class="carousel-inner">
+            @{int i = 0;}
             @foreach (var item in Model)
             {
-                <div class="carousel-item active">
-                    <img class="d-block w-100"
-                         src="@ViewBag.BaseFilePath@item.Image"
-                         alt=" @item.ImageAltTag" />
-                    <div class="np_bannerContentOuter">
-                        <div class="nb_bannerCaptionWrap">
-                            <h5>
-                               @item.Text
-                            </h5>
-                           
-                            <button>@item.ButtonText</button>
+                if (i == 0)
+                {
+                    <div class="carousel-item active">
+                        <img class="d-block w-100"
+                             src="@ViewBag.BaseFilePath@item.Image"
+                             alt=" @item.ImageAltTag" />
+                        <div class="np_bannerContentOuter">
+                            <div class="nb_bannerCaptionWrap">
+                                <h5>
+                                    @item.Text
+                                </h5>
+
+                                <button>@item.ButtonText</button>
+                            </div>
                         </div>
                     </div>
-                </div>
+                }
+                else
+                {
+                    <div class="carousel-item">
+                        <img class="d-block w-100"
+                             src="@ViewBag.BaseFilePath@item.Image"
+                             alt=" @item.ImageAltTag" />
+                        <div class="np_bannerContentOuter">
+                            <div class="nb_bannerCaptionWrap">
+                                <h5>
+                                    @item.Text
+                                </h5>
 
+                                <button>@item.ButtonText</button>
+                            </div>
+                        </div>
+                    </div>
+
+                }
+                i++;
             }
             <div class="np_bannerContentOuter CountWrap">
                 <a href="#NorthumbriaCarousle"
