--- a/WMS/Views/Theme/Default/Products/Create.cshtml
+++ b/WMS/Views/Theme/Default/Products/Create.cshtml
@@ -134,7 +134,7 @@
                         </div>
                     </div>
                     @*@Html.Action("_ProductKitCombobox", new { ProductId = Model.ProductId })
-                        @Html.Hidden("ProductKit")*@
+                @Html.Hidden("ProductKit")*@
 
 
                 </div>
@@ -276,6 +276,15 @@
                 <div class="col-md-8">
                     @Html.EditorFor(model => model.Weight)
                     @Html.ValidationMessageFor(model => model.Height)
+                </div>
+            </div>
+            <div class="input-group h-100 justify-content-center align-items-center">
+                @Html.Label("Choose Site", htmlAttributes: new { @class = "col-md-4" })
+                <div class="col-md-8">
+                    @Html.DropDownListFor(u => u.SiteId, new SelectList(ViewBag.WebsiteIds, "SiteID", "SiteName"), "Select Site", new { @class = "chosen-select" })
+                    @Html.ValidationMessageFor(model => model.SiteId)
+                   
+
                 </div>
             </div>
 
