--- a/WMS/Views/Theme/Default/Products/Edit.cshtml
+++ b/WMS/Views/Theme/Default/Products/Edit.cshtml
@@ -229,7 +229,7 @@
                             </div>
                         </div>
                         @*@Html.Action("_ProductKitCombobox", new { ProductId = Model.ProductId })
-                            @Html.Hidden("ProductKit")*@
+                @Html.Hidden("ProductKit")*@
 
 
                     </div>
@@ -371,6 +371,15 @@
                     <div class="col-md-8">
                         @Html.EditorFor(model => model.Weight)
                         @Html.ValidationMessageFor(model => model.Weight)
+                    </div>
+                </div>
+                <div class="input-group h-100 justify-content-center align-items-center">
+                    @Html.Label("Choose Site", htmlAttributes: new { @class = "col-md-4" })
+                    <div class="col-md-8">
+                        @Html.DropDownListFor(u => u.SiteId, new SelectList(ViewBag.WebsiteIds, "SiteID", "SiteName", Model.SiteId), "Select Site", new { @class = "chosen-select" })
+                        @Html.ValidationMessageFor(model => model.SiteId)
+
+
                     </div>
                 </div>
                 <div class="input-group h-100 justify-content-center align-items-center">
