--- a/WMS/Views/Theme/Modern/Products/Create.cshtml
+++ b/WMS/Views/Theme/Modern/Products/Create.cshtml
@@ -134,7 +134,7 @@
                         </div>
                     </div>
                     @*@Html.Action("_ProductKitCombobox", new { ProductId = Model.ProductId })
-                        @Html.Hidden("ProductKit")*@
+                @Html.Hidden("ProductKit")*@
 
 
                 </div>
@@ -278,7 +278,15 @@
                     @Html.ValidationMessageFor(model => model.Height)
                 </div>
             </div>
+            <div class="input-group h-100 justify-content-center align-items-center">
+                @Html.Label("Choose Site", htmlAttributes: new { @class = "col-md-4" })
+                <div class="col-md-8">
+                    @Html.DropDownListFor(u => u.SiteId, new SelectList(ViewBag.WebsiteIds, "SiteID", "SiteName", Model.SiteId), "Select Site", new { @class = "chosen-select" })
+                    @Html.ValidationMessageFor(model => model.SiteId)
 
+
+                </div>
+            </div>
             <div class="input-group h-100 justify-content-center align-items-center">
                 @Html.Label("Product Sites", htmlAttributes: new { @class = "col-md-4" })
                 <div class="col-md-8">
