--- a/WMS/Views/Theme/Modern/Products/Edit.cshtml
+++ b/WMS/Views/Theme/Modern/Products/Edit.cshtml
@@ -229,7 +229,7 @@
                             </div>
                         </div>
                         @*@Html.Action("_ProductKitCombobox", new { ProductId = Model.ProductId })
-                            @Html.Hidden("ProductKit")*@
+                @Html.Hidden("ProductKit")*@
 
 
                     </div>
@@ -374,12 +374,22 @@
                     </div>
                 </div>
                 <div class="input-group h-100 justify-content-center align-items-center">
+                    @Html.Label("Choose Site", htmlAttributes: new { @class = "col-md-4" })
+                    <div class="col-md-8">
+                        @Html.DropDownListFor(u => u.SiteId, new SelectList(ViewBag.WebsiteIds, "SiteID", "SiteName", Model.SiteId), "Select Site", new { @class = "chosen-select" })
+                        @Html.ValidationMessageFor(model => model.SiteId)
+
+
+                    </div>
+                </div>
+                <div class="input-group h-100 justify-content-center align-items-center">
                     @Html.Label("Product Sites", htmlAttributes: new { @class = "col-md-4" })
                     <div class="col-md-8">
                         @Html.ListBox("SiteIds", new MultiSelectList(ViewBag.WebsiteIds, "SiteID", "SiteName", ViewBag.linksiteIds), new { Multiple = "multiple", size = "5", @class = "chosen-select", data_placeholder = "Choose Site" })
 
                     </div>
                 </div>
+
                 <div class="input-group h-100 justify-content-center align-items-center">
                     @Html.Label("Manufacturer", htmlAttributes: new { @class = "col-md-4" })
                     <div class="col-md-8">
