--- a/WMS/Views/Theme/Default/ProductAllowanceGroups/Edit.cshtml
+++ b/WMS/Views/Theme/Default/ProductAllowanceGroups/Edit.cshtml
@@ -25,14 +25,12 @@
 <script>
 
     function submitformNav() {
-        debugger;
         var productids = $("#SelectedProductIds").val();
         if (productids == null || productids == "" || productids == undefined) {
             alert("Select product first");
             return false;
         }
         else {
-
             $("#ProductsWithIds").val(productids);
         }
 
@@ -62,9 +60,9 @@
 {
     @Html.AntiForgeryToken()
     @Html.HiddenFor(model => model.SelectedProductIds)
-    @Html.HiddenFor(model=>model.SiteID)
+    @Html.HiddenFor(model => model.SiteID)
     @Html.Hidden("ProductsWithIds")
-   <div class="col-md-12">
+    <div class="col-md-12">
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="col-md-4 pull-left">
             <div class="input-group h-100 justify-content-center align-items-center">
@@ -84,7 +82,7 @@
         </div>
         <div class="col-md-8 pull-left">
 
-            @Html.Action("_ProductAllowanceGroupProductList", new { SiteId = Model.SiteID, ProductAllownceGroupId=Model.Id })
+            @Html.Action("_ProductAllowanceGroupProductList", new { SiteId = Model.SiteID, ProductAllownceGroupId = Model.Id })
 
         </div>
 
@@ -92,7 +90,7 @@
     </div> <div class="input-group h-100 justify-content-center align-items-center">
         <div class="col-md-offset-2 col-md-10 bottom-right">
             <input type="submit" class="btn btn-primary" value="Save" />
-            <div class="back-list">@Html.ActionLink("Back to List", "Index", new { SiteId = Model.SiteID}, new { @class = "btn btn-default" })</div>
+            <div class="back-list">@Html.ActionLink("Back to List", "Index", new { SiteId = Model.SiteID }, new { @class = "btn btn-default" })</div>
         </div>
     </div>
 
