modify university theme bugs that are mentioned in email Imported from Changeset 2523

--- a/WarehouseEcommerce/Views/Theme/University/Shared/_DeliveryInfoPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_DeliveryInfoPartial.cshtml
@@ -10,15 +10,14 @@
                 </li>
                 <li>
                     <a href="">
-                        <i class="ico icon-click"></i>
+                        <i class="ico icon-click" style="vertical-align: sub;"></i>
                         <span class="txt">Click & Collect</span>
                     </a>
                 </li>
                 <li>
-                    <div href="">
+                    <a href="">
                         <i class="ico icon-verified"></i>
-                        <span class="txt">100% Purchase Protection</span></a
-                        >
+                        <span class="txt">100% Purchase Protection</span></a>
                 </li>
                 <li>
                     <a href="">
