--- a/WarehouseEcommerce/Content/Theme/University/UniversityCustomStyle.css
+++ b/WarehouseEcommerce/Content/Theme/University/UniversityCustomStyle.css
@@ -37,3 +37,44 @@ white-space: nowrap;
     width: 18px;
     height: 18px;
 }
+.uni-pages-main .nb_header_btm_beedsec {
+    margin-top: -21px;
+    font-family: "primaryfont_SemiBold";
+}
+.uni-pages-main .nb_sec_navwrap .nb_sec_navlist li a i {
+    margin-right: unset;
+}
+.uni-pages-main .nb_sec_navwrap .nb_sec_navlist li a:hover > .uni-pages-main .nb_sec_navwrap .nb_sec_navlist li a i {
+    color: #f33655;
+}
+.uni-pages-main .nb_sec_navwrap .nb_sec_navlist li a {
+    pointer-events: none;
+    cursor: default;
+}
+
+.uni-pages-main .nb_prdlisting_pgsec .breadCrumbtopsec .nb_bread_crumbwrap nav ol li:before {
+    content:"";
+}
+.uni-pages-main .nb_prdlisting_pgsec .breadCrumbtopsec .nb_bread_crumbwrap .breadcrumb > li:after {
+    top: 7px;
+    right: -4px;
+    width: 7px;
+    height: 7px;
+}
+.uni-pages-main .nb_prdlisting_pgsec .breadCrumbtopsec .sortBysec select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    text-indent: 1px;
+    text-overflow: '';
+}
+    .uni-pages-main .nb_prdlisting_pgsec .breadCrumbtopsec .sortBysec select:focus {
+        border-color: #495057;
+        border-radius: unset;
+    }
+
+.uni-pages-main .nb_prdlisting_pgsec .breadCrumbtopsec {
+    font-family: "primaryfont_SemiBold";
+}
+.uni-pages-main .nb_prd_filterwrap {
+    font-family: "primaryfont_SemiBold";
+}
