--- a/WarehouseEcommerce/Content/Theme/University/app/css/northumbria_custom.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/northumbria_custom.css
@@ -1818,6 +1818,7 @@ input[type="number"]::-webkit-outer-spin-button {
     width: 100%;
     float: left;
     margin-bottom: 46px;
+    position: relative;
 }
 
     .prd_lst_boxouter .imagewrap {
@@ -3870,3 +3871,23 @@ bloglistSec .bloglistSecInner .bloglistBox .nb_fb_img {
             .youmayalLikesec .ymalList li:last-child {
                 border-bottom: none;
             }
+
+prd_lst_boxouter .badge {
+    width: 60px;
+    height: 60px;
+    position: absolute;
+    right: -15px;
+    top: -15px;
+}
+.badge {
+    display: inline-block;
+    padding: .25em .4em;
+    font-size: 75%;
+    font-weight: 700;
+    line-height: 1;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: .25rem;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
